--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.4",
     "@react-three/postprocessing": "^3.0.4",
     "@splinetool/react-spline": "^4.0.0",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
