--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "swiper": "^12.0.2",
     "three": "^0.178.0"
   },
   "devDependencies": {
