--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "postcss": "^8.5.6",
