--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:testsprite": "npx @testsprite/testsprite-mcp generateCodeAndExecute"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.4",
